tests/NormalTests/paczka1/small_fuzzy/13863605.err
Error in line 13: KJtc9ph A149 41,9
Error in line 9: 2jPHpI A149 18,6
